# architecture_course

./: .gitignore  README.md
sprint 5/tf/: .terraform.lock.hcl  terraform.tfstate  terraform.tfvars
sprint_1/Microservices/: README.md
sprint_1/architecture-project-personal/: package-lock.json  qa.md
sprint_10/: .gitignore
sprint_10/Task1/: README.md  data_flow_diagram.drawio
sprint_10/Task2/: README.md  c4_container.drawio
sprint_11/Task1/: README.md  c4_data.drawio
sprint_11/Task2/: README.md  dfd.mermaid
sprint_11/Task3/: README.md
sprint_11/data_mesh/: docker-compose.yml
sprint_11/data_pipeline/: docker-compose.yml
sprint_11/tech_radar/: package-lock.json  package.json
sprint_2/app-scaling/: task1.drawio
sprint_2/scaling/: README.md  docker-compose.yaml  replicaset_vs_masterslave.md  replicaset_vs_multimaster.md
sprint_3/: docker-compose.yml
sprint_3/docs/: mkdocs.yml
sprint_3/logistics-service/: Dockerfile  app.py  requirements.txt
sprint_3/order-service/: Dockerfile  app.py  requirements.txt
sprint_3/plantuml/: C4_Code.puml  test.puml  test3.puml
sprint_4/: backpressure.py  curcuit_breaker.py  package-lock.json  package.json
sprint_4/cache-refresh-ahead/: index.js  package-lock.json
sprint_4/cache-sample/: index.js
sprint_4/cache-sample-redis/: docker-compose.yaml  index.js  package-lock.json  package.json
sprint_4/project/: README.md  (+2 more)
sprint_8/: authorization_code_grant.md  implicit_code_grant.md  pkce.md  summary.md
sprint_8/project/backend/: Dockerfile  pyproject.toml
sprint_8/project/backend/app/: auth.py  main.py
(+548 files in other folders)
